# streamlit-hasher

./: app.py  dockerfile  pyproject.toml
.github/workflows/: deploy-on-azure.yaml
.streamlit/: config.toml
