[tool.poetry]
name = "st-hasher"
version = "0.1.0"
description = ""
authors = ["Miguel Hinojosa <36677796+mikemdr1@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.33.0"
streamlit-authenticator = "^0.3.2"
bcrypt = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
